--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8aaaa20
+	base = 80602fb
 	trimbase = 
 	parent = release/kinetic/rosconsole_bridge
-	previous = 
+	previous = 8aaaa20
