--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 79eddb1
+	base = 1bf8d47
 	trimbase = 
 	parent = arch/kinetic/rosconsole_bridge
-	previous = 
+	previous = 79eddb1
