--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bbe7346
+	base = a4ddab5
 	trimbase = 
 	parent = release/lunar/rosconsole_bridge
-	previous = 
+	previous = bbe7346
