--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e1c30bb
+	base = 092e464
 	trimbase = 
 	parent = arch/lunar/rosconsole_bridge
-	previous = 
+	previous = e1c30bb
