--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1bd3970
+	base = bd83955
 	trimbase = 
 	parent = release/melodic/rosconsole_bridge
-	previous = 
+	previous = 1bd3970
