--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cbc9120
+	base = 22763e1
 	trimbase = 
 	parent = arch/melodic/rosconsole_bridge
-	previous = 
+	previous = cbc9120
